# datetime-helper

./: .gitignore  AGENTS.md  README.md  TODO  architecture.md  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
.beads/: metadata.json
.beads/backup/: backup_state.json  config.jsonl  events.jsonl  issues.jsonl
.github/workflows/: deploy.yml
_bmad-output/brainstorming/: brainstorming-session-2026-02-12.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffolding-wasm-engine-validation.md  1-2-page-layout-wasm-bridge-integration.md  1-3-live-ticking-hero-timestamp-multi-format-results.md  1-4-one-click-copy-to-clipboard.md  1-5-ci-cd-pipeline-production-deployment.md  2-1-start-date-input-with-now-default.md  2-2-single-operation-row-with-live-results.md  2-3-multi-step-operations-reset.md  3-1-dark-light-mode-with-system-preference.md  3-2-responsive-layout-for-tablet-mobile.md  3-3-keyboard-navigation-screen-reader-support.md  4-1-command-palette-entry-and-availability-detection.md  4-2-natural-language-parsing-to-calculator-operations.md  4-3-auto-execute-parsed-steps-with-editable-review.md  6-2-snap-to-boundary-operations.md  (+14 more)
crates/datetime-engine/: Cargo.toml
crates/datetime-engine/src/: calc.rs  format.rs  json_utils.rs  lib.rs  validate.rs
crates/datetime-engine/tests/: correctness.rs  edge_cases.rs  format.rs
docs/: embed.md  uiux-review-2026-02-21.md
e2e/: accessibility.spec.ts  mobile-picker.spec.ts  responsive.spec.ts  theme.spec.ts  url-state.spec.ts
examples/: embed-host.html
scripts/: generate-iana-timezones.mjs
(+89 files in other folders)
